// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. s2s-action-types 1`] = `
"
export type Action = Increment

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
export const INCREMENT: \\"app/counter/increment\\" = \\"app/counter/increment\\";

export const Actions = {
  INCREMENT
};

export type Increment = {
  type: typeof INCREMENT
};

export type Action = Increment;
"
`;

exports[`1. s2s-action-types 2`] = `
"
export type Action = Increment

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
export const INCREMENT: \\"counter/increment\\" = \\"counter/increment\\";

export const Actions = {
  INCREMENT
};

export type Increment = {
  type: typeof INCREMENT
};

export type Action = Increment;
"
`;

exports[`2. s2s-action-types 1`] = `
"
// @flow
export type Action = Increment

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
export const INCREMENT: \\"app/counter/increment\\" = \\"app/counter/increment\\";

export const Actions = {
  INCREMENT
};

export type Increment = {
  type: typeof INCREMENT
};

export type Action = Increment;
"
`;

exports[`3. s2s-action-types 1`] = `
"
export type Action = Increment | Decrement

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
export const INCREMENT: \\"app/counter/increment\\" = \\"app/counter/increment\\";
export const DECREMENT: \\"app/counter/decrement\\" = \\"app/counter/decrement\\";

export const Actions = {
  INCREMENT,
  DECREMENT
};

export type Increment = {
  type: typeof INCREMENT
};
export type Decrement = {
  type: typeof DECREMENT
};

export type Action = Increment | Decrement;
"
`;

exports[`already has Actions 1`] = `
"
const x = 'x'

export const Actions = {}

export type Action = Add;

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
export const ADD: 'app/counter/add' = 'app/counter/add';

export const Actions = {
  ADD
};

export type Add = {
  type: typeof ADD
};

export type Action = Add;
"
`;

exports[`import type 1`] = `
"
import type { UserID } from './types.js'

export type FetchUser = {
  type: typeof FETCH_USER,
  id: UserID
};

export type Action = FetchUser;

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
import type { UserID } from './types.js';

export const FETCH_USER: 'app/counter/fetch_user' = 'app/counter/fetch_user';

export const Actions = {
  FETCH_USER
};

export type FetchUser = {
  type: typeof FETCH_USER;
  id: UserID;
};

export type Action = FetchUser;
"
`;

exports[`imports 1`] = `
"
// @flow
import type { X } from './types';

export type Action = Increment

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
import type { X } from './types';

export const INCREMENT: 'app/counter/increment' = 'app/counter/increment';

export const Actions = {
  INCREMENT
};

export type Increment = {
  type: typeof INCREMENT
};

export type Action = Increment;
"
`;

exports[`no type Action 1`] = `
"
// @flow

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow

export const Actions = {};

export type Action = ;
"
`;

exports[`payload 1`] = `
"
export const INCREMENT: 'app/counter/Increment' = 'app/counter/Increment';

export type Increment = { type: typeof INCREMENT, payload: number };

export type Action = Increment;

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
export const INCREMENT: 'app/counter/increment' = 'app/counter/increment';

export const Actions = {
  INCREMENT
};

export type Increment = { type: typeof INCREMENT; payload: number; };

export type Action = Increment;
"
`;

exports[`remove unuded action 1`] = `
"
export const INCREMENT: 'app/counter/Increment' = 'app/counter/Increment';

export type Increment = { type: typeof INCREMENT, payload: number };

export type Action = Decrement;

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
export const DECREMENT: 'app/counter/decrement' = 'app/counter/decrement';

export const Actions = {
  DECREMENT
};

export type Decrement = {
  type: typeof DECREMENT
};

export type Action = Decrement;
"
`;

exports[`snake_case 1`] = `
"
export type Action = ThisIsAction;

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
export const THIS_IS_ACTION: \\"app/counter/this_is_action\\" = \\"app/counter/this_is_action\\";

export const Actions = {
  THIS_IS_ACTION
};

export type ThisIsAction = {
  type: typeof THIS_IS_ACTION
};

export type Action = ThisIsAction;
"
`;
